--- a/css/main.css
+++ b/css/main.css
@@ -19,19 +19,19 @@ body {
     height: 494px;
 }
 
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px;
 }
 
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
 	display: none;
   } 
 
 .ryu-ready {
   background-image: url('../images/ryu-ready-position.gif');
 }
-
+	
 .ryu-still {
   background-image: url('../images/ryu-standing-still.png');
 }
@@ -40,7 +40,10 @@ body {
   background-image: url('../images/ryu-throwing-hadouken.png');
 
 }
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-cool {
+	background-image: url("file:///Users/Brahim/Projects/jquery-streetfighter/images/ryu-cool.gif");
+}
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   background-repeat: no-repeat;
 }
 .hadouken {
